--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <style>
-
-  </style>
+  <link href="styles.css" rel="stylesheet">
+  <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
 </head>
 
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
   <div id="page">
@@ -103,7 +100,7 @@
             <!-- /btn to bot -->
             <div class="row">
               <div class="col-md-12 col-sm-12">
-                <div style="display: flex; justify-content: center; align-items: center; padding: 10px 0px;">
+                <div class="btn-bot" style="display: flex; justify-content: center; align-items: center; padding: 10px 0px;">
                   <a type="button" class="btn btn-default" href="#section1" style="background: transparent; border: 1px solid rgb(105, 108, 113); border-radius: 18px; width: 36px; height: 36px;">
                     <div style="justify-content: center; align-items: center;">
                       <img src="https://evys.ru/static/images/arrow_down.png" style="width: 12px; height: 12px;">
@@ -128,9 +125,14 @@
         <div class="row">
           <div class="col-md-12">
             <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px 0px;">
-              <h2 style="text-align: center; font-family: MuseoSans, sans-serif; font-weight: 300;">Мы научим тебя</h2>
+
+              <h2 style="text-align: center; font-family: MuseoSans, sans-serif; font-weight: 300;">
+                Мы научим тебя
+              </h2>
+
               <div style="width: 50px; height: 10px; background: black; margin-top: 20px;">
               </div>
+
             </div>
           </div>
         </div>
@@ -305,21 +307,44 @@
 
       <!-- /section3 -->
           <div>
-            <div style="background-color: rgb(247, 247, 247);">
               <div class="container" id="section3">
                 <div class="row" style="margin-left: auto; margin-right: auto; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px 0px;">
-                  <!-- /title of section3 -->
+                  <!-- /title of section3 and line -->
                   <div class="col-md-12">
                     <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px 0px;">
                       <h2 style="text-align: center; font-family: code;">
                         Посмотри, что произошло с теми, кто уже учился в EVYS Repetitor и стал репетитором за 10 дней
                       </h2>
+                      <div style="width: 50px; height: 10px; background: black; margin-top: 20px;">
+                      </div>
                     </div>
                   </div>
-                  <!-- title of section3/ -->
+                  <!-- title of section3 and line/ -->
+                  <div>
+                    <div class="col-md-4">
+                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px; margin-right: 50px;">
+                      <div style="text-align: center;">
+                        <h3>МАРИЯ АСТАХОВА</h3>
+                        <p>"Очень давно хотела стать репетитором, но не знала с чего начать, как найти ученика и как организовать процесс обучения..."</p>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px;">
+                      <div style="text-align: center;">
+                        <h3>ГУЛЬНОЗА ГАЮРОВА</h3>
+                        <p>"Нашла ученика уже после 1 занятия. Рекомендует курс студентам и аспирантам, которые хотят реализовать свои знания в сфере преподавания и при этом получать доход."</p>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px; margin-left: 10px;">
+                      <div style="text-align: center; margin-left: 10px;">
+                        <h3>ЮРИЙ СЕВОСТЬЯНОВ</h3>
+                        <p>"К концу курса, благодаря правильно составленным анкетам, я получил ученика и начал зарабатывать деньги".</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
         </div>
         <!-- section3/ -->
 
