--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
          <!-- /block 2 nedely.. -->
           <div class="row">
             <div class="col-md-6 col-sm-6">
-              <div style="display: flex; flex-direction: column; justify-content: flex-start; padding: 200px 60px; transform: translate3d(0px, 0px, 0px); opacity: 1;">
+              <div style="height: 30px;"></div>
+              <div style="display: flex; flex-direction: column; justify-content: flex-start; padding-top: 300px; padding-bottom: 100px; padding-right: 60px; transform: translate3d(0px, 0px, 0px); opacity: 1;">
                 <span style="color: white; font-size: 14px; padding: 8px; font-family: MuseoSans, sans-serif;">Комплексный курс для начинающих преподавателей</span>
                 <span style="color: white; font-size: 24px; padding: 8px; font-family: MuseoSans, sans-serif; font-weight: 600;">
                   <span style="color: rgb(3, 169, 244);">
@@ -106,7 +107,7 @@
               <div class="col-md-12 col-sm-12">
                 <div class="btn-bot" style="display: flex; justify-content: center; align-items: center; padding: 10px 0px;">
                   <a type="button" class="btn btn-default" href="#section1" style="background: transparent; border: 1px solid rgb(105, 108, 113); border-radius: 18px; width: 36px; height: 36px;">
-                    <div style="justify-content: center; align-items: center;">
+                    <div style="justify-content: center; align-items: center; padding-top: 6px;">
                       <img src="https://evys.ru/static/images/arrow_down.png" style="width: 12px; height: 12px;">
                     </div>
                   </a>
@@ -145,14 +146,14 @@
         <div class="row" style="position: relative; overflow: hidden;">
 
           <!-- /Iphone -->
-          <div class="col-md-6 col-md-push-6 col-sm-12">
-            <div style="transform: translate3d(0px, 0px, 0px); opacity: 1;">
+          <div class="col-md-6 col-sm-12">
+            <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
               <img src="https://evys.ru/static/images/iPHONE_TG.png" class="" style="max-height: 596px;">
             </div>
           </div>
           <!-- Iphone/ -->
 
-          <div class="col-md-6 col-md-pull-6 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <div style="display: flex; align-items: center; flex-direction: column;">
 
               <!-- /about -->
@@ -290,7 +291,7 @@
               <!-- /section 2 btn -->
               <div class="col-md-12">
                 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding-top: -30px;">
-                  <h2 style="transform: translate3d(0px, 0px, 0px); opacity: 1; font-family: MuseoSans, sans-serif; text-align: center;">
+                  <h2 style="transform: translate3d(0px, 0px, 0px); opacity: 1; font-family: code; text-align: center;">
                     Присоединяйся<br>Прямо сейчас
                   </h2>
                   <a tabindex="0" href="https://evys.ru/app/login" style="border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px 0px 20px; padding: 0px; outline: none; font-size: inherit; font-weight: inherit; position: relative; vertical-align: middle; height: 36px; line-height: 36px; min-width: 88px; color: rgba(0, 0, 0, 0.87); transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 25px; user-select: none; overflow: hidden; background-color: rgb(3, 169, 244); text-align: center;">
@@ -327,31 +328,37 @@
                   <!-- /video block -->
                   <div>
                     <!-- /video1 -->
-                    <div class="col-md-4">
-                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px; margin-right: 50px;">
-                      <div style="text-align: center;">
-                        <h3>МАРИЯ АСТАХОВА</h3>
+                    <div class="col-md-4 col-xs-12">
+                      <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                      <iframe width="360" height="200" src="https://www.youtube.com/embed/6mbafAJbsbg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <div style="text-align: center; font-family: code;">
+                        <h3>Мария Астахова</h3>
                         <p>"Очень давно хотела стать репетитором, но не знала с чего начать, как найти ученика и как организовать процесс обучения..."</p>
                       </div>
+                    </div>
                     </div>
                     <!-- video1/ -->
 
                     <!-- /video2 -->
-                    <div class="col-md-4">
-                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px;">
-                      <div style="text-align: center;">
-                        <h3>ГУЛЬНОЗА ГАЮРОВА</h3>
+                    <div class="col-md-4 col-xs-12">
+                      <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                      <iframe width="360" height="200" src="https://www.youtube.com/embed/5t_0l-KRyZU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <div style="text-align: center; font-family: code;">
+                        <h3>Гульноза Гаюрова</h3>
                         <p>"Нашла ученика уже после 1 занятия. Рекомендует курс студентам и аспирантам, которые хотят реализовать свои знания в сфере преподавания и при этом получать доход."</p>
                       </div>
+                    </div>
                     </div>
                     <!-- video2/ -->
 
                     <!-- /video3 -->
-                    <div class="col-md-4">
-                      <img src="https://s17.postimg.org/q0g09l20v/screen.jpg" class="screen" style="max-height: 200px; margin-left: 10px;">
-                      <div style="text-align: center; margin-left: 10px;">
-                        <h3>ЮРИЙ СЕВОСТЬЯНОВ</h3>
+                    <div class="col-md-4 col-xs-12">
+                      <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                     <iframe  width="360" height="200" src="https://www.youtube.com/embed/zxlNMQqjQYQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <div style="text-align: center; margin-left: 10px; font-family: code;">
+                        <h3>Юрий Севостьянов</h3>
                         <p>"К концу курса, благодаря правильно составленным анкетам, я получил ученика и начал зарабатывать деньги".</p>
+                      </div>
                       </div>
                     </div>
                     <!-- video3/ -->
@@ -380,25 +387,27 @@
         <!-- /footer -->
         <div style="background-color: rgb(54, 54, 54); padding: 20px;">
           <!-- /social icons -->
-          <div style="display: flex; justify-content: flex-end; margin-top: 30px;">
-            <a></a>
-            <a></a>
-            <a></a>
-            <a></a>
+          <div style="display: flex; justify-content: flex-end; margin-top: 20px;">
+            <ul class="list-inline">
+              <li><a href="#" target="_blank" id="vk"><i class="fa fa-vk fa-2x"></i></a></li>
+              <li><a href="#" target="_blank" id="instagram"><i class="fa fa-instagram fa-2x"></i></a></li>
+              <li><a href="#" target="_blank" id="twitter"><i class="fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="#" target="_blank" id="youtube"><i class="fa fa-youtube-play fa-2x"></i></a></li>
+            </ul>
           </div>
           <!-- social icons/ -->
 
           <!-- /contacts -->
-          <div style="display: flex; justify-content: flex-end; margin-top: 30px;">
-            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 12px;">+8 800 123 45 67(Россия)</span>
+          <div style="display: flex; justify-content: flex-end; margin-top: 20px;">
+            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 20px;">+8 800 123 45 67(Россия)</span>
           </div>
 
-          <div style="display: flex; justify-content: flex-end; margin-top: 30px;">
-            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 12px;">+8 800 123 45 67(Россия)</span>
+          <div style="display: flex; justify-content: flex-end; margin-top: 20px;">
+            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 20px;">+8 800 123 45 67(Россия)</span>
           </div>
 
-          <div style="display: flex; justify-content: flex-end; margin-top: 30px;">
-            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 12px;">info@evys.ru</span>
+          <div style="display: flex; justify-content: flex-end; margin-top: 20px;">
+            <span style="color: white; font-family: MuseoSans, sans-serif; font-size: 20px;">info@evys.ru</span>
           </div>
           <!-- contacts/ -->
 
@@ -408,4 +417,20 @@
   </div>
 
 </body>
+
+<style>
+.fa {
+    background: white;
+    text-align:center;
+    width: 50px;
+    height: 50px;
+    float:left;
+    border:1px solid #ccc;
+    box-shadow:0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
+    border-radius: 50px;
+    margin:0 5px 5px 0;
+    padding: 10px;
+    color:  rgb(54, 54, 54);;
+}
+</style>
 </html>
