--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="animate.css">
   <script type="text/javascript" src="scripts.js"></script>
+  <script src="wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 </head>
 
 <body>
@@ -62,7 +66,7 @@
        <div class="container" id="start">
 
          <!-- /block 2 nedely.. -->
-          <div class="row">
+          <div class="row wow fadeInLeft">
             <div class="col-md-6 col-sm-6">
               <div style="height: 30px;"></div>
               <div style="display: flex; flex-direction: column; justify-content: flex-start; padding-top: 300px; padding-bottom: 100px; padding-right: 60px; transform: translate3d(0px, 0px, 0px); opacity: 1;">
@@ -81,7 +85,7 @@
             <div class="row" style="padding: 20px 0px;">
 
               <!-- /22 febr -->
-              <div class="col-sm-6">
+              <div class="col-sm-6 wow fadeInUp">
                 <div style="transform: translate3d(0px, 0px, 0px); opacity: 1; display: flex; justify-content: center; align-items: center;">
                   <span style="color: white; font-size: 18px; padding: 8px; font-family: MuseoSans, sans-serif;">Старт 22 февраля</span>
                 </div>
@@ -89,7 +93,7 @@
               <!-- 22 febr/ -->
 
               <!-- /join btn -->
-              <div class="col-md-6 col-sm-6">
+              <div class="col-md-6 col-sm-6 wow fadeInUp">
                 <div style="transform: translate3d(0px, 0px, 0px); opacity: 1; display: flex; justify-content: center; align-items: center;">
                   <a tabindex="0" href="https://evys.ru/app/login" target="_blank" style="border: 1px solid rgb(3, 169, 244); box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: inherit; font-weight: inherit; position: relative; vertical-align: middle; height: 36px; line-height: 36px; min-width: 88px; color: rgba(0, 0, 0, 0.87); transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 25px; user-select: none; overflow: hidden; background: rgb(3, 169, 244); text-align: center;">
                     <div>
@@ -146,14 +150,14 @@
         <div class="row" style="position: relative; overflow: hidden;">
 
           <!-- /Iphone -->
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-6 col-sm-12 wow fadeInLeft">
             <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
               <img src="https://evys.ru/static/images/iPHONE_TG.png" class="" style="max-height: 596px;">
             </div>
           </div>
           <!-- Iphone/ -->
 
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-6 col-sm-12 wow fadeInRight">
             <div style="display: flex; align-items: center; flex-direction: column;">
 
               <!-- /about -->
@@ -289,7 +293,7 @@
               <!-- list/ -->
 
               <!-- /section 2 btn -->
-              <div class="col-md-12">
+              <div class="col-md-12 wow fadeInUp">
                 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding-top: -30px;">
                   <h2 style="transform: translate3d(0px, 0px, 0px); opacity: 1; font-family: code; text-align: center;">
                     Присоединяйся<br>Прямо сейчас
