--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
               <!-- about/ -->
 
               <!-- /about btn and text -->
+              <div class="wow fadeInUp">
               <h2 style="transform: translate3d(0px, 0px, 0px); opacity: 1; font-family: MuseoSans, sans-serif; text-align: center;">
               Начни бесплатно<br>Прямо сейчас
               </h2>
+              </div>
                 <a tabindex="0" href="https://evys.ru/app/login" style="border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px 0px 20px; padding: 0px; outline: none; font-size: inherit; font-weight: inherit; position: relative; vertical-align: middle; height: 36px; line-height: 36px; min-width: 88px; color: rgba(0, 0, 0, 0.87); transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 25px; user-select: none; overflow: hidden; background-color: rgb(3, 169, 244); text-align: center;">
                   <div>
                     <span style="color: white; font-size: 18px; padding: 8px; font-family: MuseoSans, sans-serif;">Присоединиться</span>
