--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
@@ -24,9 +25,10 @@
 
 
         <!-- /navigation -->
-        <nav class="navbar navbar-fixed-top navbar-inverse" style="background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%); background-repeat: repeat-x;">
+        <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation" style="background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%); background-repeat: repeat-x;">
           <div class="container">
-            <div class="navbar-header">
+            <div class="col-md-1"> </div>
+            <div class="col-md-6 navbar-header">
               <a href="#start">
              <img src="https://evys.ru/static/images/EVYS.png" class="navbar-brand" style="height: 65px; width: 180px;">
               </a>
@@ -41,18 +43,18 @@
 
             <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                  <li role="presentation" class="" >
-                    <a role="button" href="#section1" style="padding-bottom: 10px; margin-top: 8px;" >
+                  <li>
+                    <a href="#section1" style="padding-bottom: 10px; margin-top: 8px;" >
                       <p style="color: white;">О курсе</p>
                     </a>
                   </li>
-                  <li role="presentation" class="">
-                    <a role="button" href="#section2" style="padding-bottom: 10px; margin-top: 8px;">
+                  <li>
+                    <a href="#section2" style="padding-bottom: 10px; margin-top: 8px;">
                       <p style="color: white;">EvysQ</p>
                     </a>
                   </li>
-                  <li role="presentation" class="">
-                    <a role="button" href="#section3" style="padding-bottom: 10px; margin-top: 8px;">
+                  <li>
+                    <a href="#section3" style="padding-bottom: 10px; margin-top: 8px;">
                       <p style="color: white;">Отзывы</p>
                     </a>
                   </li>
@@ -63,7 +65,8 @@
         <!-- navigation/ -->
 
         <!-- /section start -->
-       <div class="container" id="start">
+        <section id="start" class="nav">
+       <div class="container">
 
          <!-- /block 2 nedely.. -->
           <div class="row wow fadeInLeft">
@@ -125,11 +128,13 @@
 
         </div>
        </div>
+     </section>
        <!-- section start/ -->
 
 
       <!-- /section 1 -->
-      <div class="container" id="section1">
+      <section class="nav" id="section1">
+      <div class="container">
         <!-- /title and line -->
         <div class="row">
           <div class="col-md-12">
@@ -188,12 +193,14 @@
           </div>
         </div>
       </div>
+    </section>
       <!-- section 1/ -->
 
       <!-- /section 2 -->
       <div>
         <div style="background-color: rgb(247, 247, 247);">
-          <div class="container" id="section2">
+          <section id="section2" class="nav">
+          <div class="container">
             <div class="row">
 
               <!-- /title of section 2 -->
@@ -312,12 +319,14 @@
 
             </div>
           </div>
+        </section>
         </div>
       </div>
       <!-- section2/ -->
 
       <!-- /section3 -->
-              <div class="container" id="section3">
+      <section id="section3" class="nav">
+              <div class="container">
                 <div class="row" style="margin-left: auto; margin-right: auto; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px 0px;">
                   <!-- /title of section3 and line -->
                   <div class="col-md-12">
@@ -388,6 +397,7 @@
 
 
               </div>
+            </section>
         <!-- section3/ -->
 
         <!-- /footer -->
