--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
         <div class="row" style="position: relative; overflow: hidden;">
 
           <!-- /Iphone -->
-          <div class="col-md-6 col-sm-12 wow fadeInLeft">
-            <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-              <img src="https://evys.ru/static/images/iPHONE_TG.png" class="" style="max-height: 596px;">
-            </div>
+          <div class="col-md-6">
+          <div class="wow fadeInLeft">
+              <img src="https://evys.ru/static/images/iPHONE_TG.png" class="" style="width: 99%;">
           </div>
+        </div>
           <!-- Iphone/ -->
-
-          <div class="col-md-6 col-sm-12 wow fadeInRight">
+          <div class="col-md-6 wow fadeInRight">
+          <div class="col-xs-12">
             <div style="display: flex; align-items: center; flex-direction: column;">
 
               <!-- /about -->
