--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              <img src="https://evys.ru/static/images/EVYS.png" class="navbar-brand" style="height: 65px; width: 180px;">
               </a>
 
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" style="margin-top: 15px;">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -156,7 +156,7 @@
 
           <!-- /Iphone -->
           <div class="col-md-6">
-          <div class="wow fadeInLeft">
+          <div class="col-xs-10 wow fadeInLeft">
               <img src="https://evys.ru/static/images/iPHONE_TG.png" class="" style="width: 99%;">
           </div>
         </div>
