lines fixed + cdn

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <script type="text/javascript" src="scripts.js"></script>
-  <script src="wow.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
               <script>
               new WOW().init();
               </script>
@@ -211,15 +211,13 @@
 
               <!-- /list -->
               <div class="col-md-12">
-                <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                <div style="display: flex; justify-content: center; align-items: center;">
                   <ul class="list-group">
                     <!-- /graphic and text -->
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
                         <img src="https://evys.ru/static/images/график.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <div style="width: 1px; align-self: stretch; padding: 5px 0px; border-radius: 20px; background: rgba(0, 0, 0, 0.3); margin-left: 15px;">
-                        </div>
-                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Благодаря методам аналитики, мы даем <strong>самый</strong> быстрый результат</p>
+                        <p class="line" style="margin-left: 12px;"></p> <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Благодаря методам аналитики, мы даем <strong>самый</strong> быстрый результат</p>
                       </div>
                     </li>
                     <!-- graphic and text/ -->
@@ -235,8 +233,7 @@
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
                         <img src="https://evys.ru/static/images/мозг.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <div style="width: 1px; align-self: stretch; padding: 5px 0px; border-radius: 20px; background: rgba(0, 0, 0, 0.3); margin-left: 15px;"></div>
-                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Метод транслирует информацию напрямую Вам в память</p>
+                        <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Метод транслирует информацию напрямую Вам в память</p>
                       </div>
                     </li>
                     <!-- brain and text/ -->
@@ -252,9 +249,7 @@
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
                         <img src="https://evys.ru/static/images/Часы.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <div style="width: 1px; align-self: stretch; padding: 5px 0px; border-radius: 20px; background: rgba(0, 0, 0, 0.3); margin-left: 15px;">
-                        </div>
-                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Мы смотрим на время прохождения Вами тестов</p>
+                        <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Мы смотрим на время прохождения Вами тестов</p>
                       </div>
                     </li>
                     <!-- watch and text/ -->
@@ -270,9 +265,7 @@
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
                         <img src="https://evys.ru/static/images/Ошибка.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <div style="width: 1px; align-self: stretch; padding: 5px 0px; border-radius: 20px; background: rgba(0, 0, 0, 0.3); margin-left: 15px;">
-                        </div>
-                    <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Тщательно отбираем задания на основе сделанных Вами ошибок</p>
+                    <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Тщательно отбираем задания на основе сделанных Вами ошибок</p>
                     </div>
                   </li>
                   <!-- error and text/ -->
@@ -287,9 +280,7 @@
                   <li class="list-group-item" style="border-width: 0px;">
                     <div style="display: flex; justify-content: flex-start; padding: 4px;">
                       <img src="https://evys.ru//static/images/телефон.png" class="img-rounded" style="height: 48px; width: 36px;">
-                      <div style="width: 1px; align-self: stretch; padding: 5px 0px; border-radius: 20px; background: rgba(0, 0, 0, 0.3); margin-left: 15px;">
-                      </div>
-                      <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Все это собирается и транслируется прямо в вашем мобильном телефоне на платформе мессенджера Telegram
+                      <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Все это собирается и транслируется прямо в вашем мобильном телефоне на платформе мессенджера Telegram
                       </p>
                     </div>
                   </li>
@@ -434,7 +425,7 @@
 
 </body>
 
-<style>
+<style type="text/css">
 .fa {
     background: white;
     text-align:center;
@@ -448,5 +439,11 @@
     padding: 10px;
     color:  rgb(54, 54, 54);;
 }
+
+ .line {
+  height: 45px;
+  border-left: 1px solid #ccc;
+  padding-left: 10px;
+ }
 </style>
 </html>
