--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <!-- /graphic and text -->
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
-                        <img src="https://evys.ru/static/images/график.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <p class="line" style="margin-left: 12px;"></p> <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Благодаря методам аналитики, мы даем <strong>самый</strong> быстрый результат</p>
+                        <img src="https://evys.ru/static/images/график.png" class="img-rounded" style="width: 36px; height: 36px;"> <p class="line" style="margin-left: 12px;"></p>
+                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Благодаря методам аналитики, мы даем <strong>самый</strong> быстрый результат</p>
                       </div>
                     </li>
                     <!-- graphic and text/ -->
@@ -232,8 +232,8 @@
                     <!-- /brain and text -->
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
-                        <img src="https://evys.ru/static/images/мозг.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Метод транслирует информацию напрямую Вам в память</p>
+                        <img src="https://evys.ru/static/images/мозг.png" class="img-rounded" style="width: 36px; height: 36px;"> <p class="line" style="margin-left: 12px;"></p>
+                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Метод транслирует информацию напрямую Вам в память</p>
                       </div>
                     </li>
                     <!-- brain and text/ -->
@@ -248,8 +248,8 @@
                     <!-- /watch and text -->
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
-                        <img src="https://evys.ru/static/images/Часы.png" class="img-rounded" style="width: 36px; height: 36px;">
-                        <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Мы смотрим на время прохождения Вами тестов</p>
+                        <img src="https://evys.ru/static/images/Часы.png" class="img-rounded" style="width: 36px; height: 36px;"> <p class="line" style="margin-left: 12px;"></p>
+                        <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Мы смотрим на время прохождения Вами тестов</p>
                       </div>
                     </li>
                     <!-- watch and text/ -->
@@ -264,8 +264,8 @@
                     <!-- /error and text -->
                     <li class="list-group-item" style="border-width: 0px;">
                       <div style="display: flex; justify-content: flex-start; padding: 4px;">
-                        <img src="https://evys.ru/static/images/Ошибка.png" class="img-rounded" style="width: 36px; height: 36px;">
-                    <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Тщательно отбираем задания на основе сделанных Вами ошибок</p>
+                        <img src="https://evys.ru/static/images/Ошибка.png" class="img-rounded" style="width: 36px; height: 36px;"><p class="line" style="margin-left: 12px;"></p>
+                    <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Тщательно отбираем задания на основе сделанных Вами ошибок</p>
                     </div>
                   </li>
                   <!-- error and text/ -->
@@ -279,8 +279,8 @@
                   <!-- /phone and text -->
                   <li class="list-group-item" style="border-width: 0px;">
                     <div style="display: flex; justify-content: flex-start; padding: 4px;">
-                      <img src="https://evys.ru//static/images/телефон.png" class="img-rounded" style="height: 48px; width: 36px;">
-                      <p class="line" style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Все это собирается и транслируется прямо в вашем мобильном телефоне на платформе мессенджера Telegram
+                      <img src="https://evys.ru//static/images/телефон.png" class="img-rounded" style="height: 48px; width: 36px;"> <p class="line" style="margin-left: 12px;"></p>
+                      <p style="font-family: MuseoSans, sans-serif; font-size: 18px; margin-left: 15px;">Все это собирается и транслируется прямо в вашем мобильном телефоне на платформе мессенджера Telegram
                       </p>
                     </div>
                   </li>
